# yakthang

./: .gitignore  .gitmodules  CLAUDE.md  Justfile  README.md  SETUP.md  THEMING-VERIFICATION.md  check-workers.sh  close-zellij-tab.sh  cost-openclaw.sh  cost-summary.sh  export-config.sh  import-config.sh  opencode.json  orchestrator.kdl  setup-vm.sh  shutdown-worker.sh  spawn-worker.sh  worker.Dockerfile  yx
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.opencode/: oh-my-opencode.jsonc  opencode.json
.worker-costs/: daily-totals.csv
accept-sandbox-flag-sj0a/: .context.md  .created.json  .name  comments.md  review-notes  shaver-message
add-clean-flag-c58h/: .context.md  .name  .parent_id
add-filesystem-change-detection-1jfe/: .context.md  .name  comments.md  shaver-message
add-overview-docs-y5g4/: .context.md  .name  agent-status
add-sandbox-runtime-mode-n5dz/: .created.json  .name
adopt-wip-state-system-numk/: .context.md  .created.json  .name  agent-status
agent-status-kind-enum-tcfw/: .context.md  .created.json  .name  .parent_id  agent-status  review-verdict
agents/: yakob.md
ai-generated-debt-cleanup-wj7e/: .context.md  .name  shaver-message
auth-login-command-ab7t/: .context.md  (+3 more)
src/yak-map/: Cargo.toml  plugin.yaml
src/yak-map/.claude/skills/: yak-map-architecture
src/yak-map/atty-stub/: Cargo.toml
src/yak-map/atty-stub/src/: lib.rs
src/yak-map/skills/yak-map-architecture/: SKILL.md
src/yak-map/src/: main.rs  model.rs  render.rs  repository.rs  tree.rs  util.rs
src/yak-map/src/render/: mod.rs  task.rs
(+832 files in other folders)
