[package]
name = "yak_map"
version = "0.1.0"
edition = "2021"
authors = ["David Laing <david@davidlaing.com>"]

[[bin]]
name = "yak-map"
path = "src/main.rs"

[dependencies]
zellij-tile = "0.44"
serde = "1.0"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
opt-level = "s"

# Patch the unmaintained atty crate (RUSTSEC-2021-0145: potential unaligned read).
# atty is pulled in transitively via zellij-tile -> zellij-utils -> clap v3.
# zellij-utils 0.44.0 still uses clap v3 which depends on atty.
# This stub reimplements the atty API using std::io::IsTerminal (safe, stable since Rust 1.70).
[patch.crates-io]
atty = { path = "atty-stub" }